WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202053
[Pointer Events] touch-action set to pan-x or pan-y alone should disable scrolling altogether if the intial gesture is in the disallowed direction
https://bugs.webkit.org/show_bug.cgi?id=202053
Summary
[Pointer Events] touch-action set to pan-x or pan-y alone should disable scro...
Antoine Quint
Reported
2019-09-20 13:03:09 PDT
[Pointer Events] touch-action set to pan-x or pan-y alone should disable scrolling altogether if the intial gesture is in the disallowed direction
Attachments
Patch
(13.61 KB, patch)
2019-09-20 13:12 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Fixes the layout tests
(2.66 KB, patch)
2019-09-25 16:48 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2019-09-20 13:12:15 PDT
Created
attachment 379262
[details]
Patch
Antoine Quint
Comment 2
2019-09-20 13:12:20 PDT
<
rdar://problem/54542190
>
Antoine Quint
Comment 3
2019-09-21 09:08:44 PDT
Committed
r250183
: <
https://trac.webkit.org/changeset/250183
>
Wenson Hsieh
Comment 4
2019-09-25 10:33:21 PDT
This appears to have regressed several layout tests: fast/scrolling/ios/reconcile-layer-position-recursive.html fast/scrolling/ios/click-events-during-momentum-scroll-in-main-frame.html fast/scrolling/ios/click-events-after-long-press-during-momentum-scroll-in-main-frame.html
Wenson Hsieh
Comment 5
2019-09-25 10:46:11 PDT
(In reply to Wenson Hsieh from
comment #4
)
> This appears to have regressed several layout tests: > > fast/scrolling/ios/reconcile-layer-position-recursive.html > fast/scrolling/ios/click-events-during-momentum-scroll-in-main-frame.html > fast/scrolling/ios/click-events-after-long-press-during-momentum-scroll-in- > main-frame.html
That said, these are currently passing on our internal testers also running iOS 13, so maybe it’s an opensource-only (ENABLE(TOUCH_EVENTS)-related) failure?
Russell Epstein
Comment 6
2019-09-25 14:16:40 PDT
(In reply to Wenson Hsieh from
comment #5
)
> (In reply to Wenson Hsieh from
comment #4
) > > This appears to have regressed several layout tests: > > > > fast/scrolling/ios/reconcile-layer-position-recursive.html > > fast/scrolling/ios/click-events-during-momentum-scroll-in-main-frame.html > > fast/scrolling/ios/click-events-after-long-press-during-momentum-scroll-in- > > main-frame.html > > That said, these are currently passing on our internal testers also running > iOS 13, so maybe it’s an opensource-only (ENABLE(TOUCH_EVENTS)-related) > failure?
Reopening bug due to above test regressions.
Wenson Hsieh
Comment 7
2019-09-25 16:48:57 PDT
Created
attachment 379591
[details]
Fixes the layout tests
Wenson Hsieh
Comment 8
2019-09-25 16:49:43 PDT
(In reply to Wenson Hsieh from
comment #7
)
> Created
attachment 379591
[details]
> Fixes the layout tests
I tested this against a non-internal iOS 13 SDK, and it seems to fix these three failing tests.
WebKit Commit Bot
Comment 9
2019-09-25 17:57:20 PDT
Comment on
attachment 379591
[details]
Fixes the layout tests Clearing flags on attachment: 379591 Committed
r250373
: <
https://trac.webkit.org/changeset/250373
>
WebKit Commit Bot
Comment 10
2019-09-25 17:57:22 PDT
All reviewed patches have been landed. Closing bug.
Antoine Quint
Comment 11
2019-09-26 04:27:39 PDT
Thanks Wenson!
Antoine Quint
Comment 12
2019-10-04 05:36:42 PDT
***
Bug 202531
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug